# llm-io-profiler

./: LICENSE  README.md  pyproject.toml
examples/: full_analysis.py
llm_io_survey/: __init__.py  __main__.py  cli.py  hardware.py  model_profile.py  visualize.py
