[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-io-survey"
version = "0.2.0"
description = "I/O Bottleneck Analysis Toolkit for LLM Inference"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "matplotlib>=3.5",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
llm-io-analyzer = "llm_io_survey.cli:main"

[project.urls]
Paper = "https://arxiv.org/abs/XXXX.XXXXX"
Repository = "https://github.com/YOUR_USERNAME/llm-io-survey"

[tool.setuptools.packages.find]
include = ["llm_io_survey*"]
